@@ -20,6 +20,8 @@ Bug fixes:
 - Fixed XHTML validity bug in content_lib_display_contents_column. Fixes #1572.
 - Allow Contributor local role to be used in Sections and Workspaces; filtered
   local roles in the Members Workspace as in Workspaces
+- #1560 "Non-Member users cannot log in (with no error message)" they can now
+  login but they don't have any member home created
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Add CSS class for comments display listed.
